--- a/src/app/pages/patrimonio/patrimonio.page.html
+++ b/src/app/pages/patrimonio/patrimonio.page.html
@@ -45,7 +45,7 @@
                                 <h3 class="item-title">Abitazioni <span>{{totalePatrimoniA}}</span></h3>
                                 <ul class="item-list">
                                     <li *ngFor="let patrimonio of patrimoniA">
-                                        <span>{{patrimonio.descrizione_tipologia}}</span><span>{{patrimonio.book_value}}</span>
+                                        <span class="badge patrimonio">4</span> <span>{{patrimonio.descrizione_tipologia}}</span><span>{{patrimonio.book_value}}</span>
                                     </li>
                                 </ul>
                             </div>
@@ -53,7 +53,7 @@
                                 <h3 class="item-title">Commerciali <span>{{totalePatrimoniC}}</span></h3>
                                 <ul class="item-list">
                                     <li *ngFor="let patrimonio of patrimoniC">
-                                        <span>{{patrimonio.descrizione_tipologia}}</span><span>{{patrimonio.book_value}}</span>
+                                        <span class="badge patrimonio">4</span> <span>{{patrimonio.descrizione_tipologia}}</span><span>{{patrimonio.book_value}}</span>
                                     </li>
                                 </ul>
                             </div>
@@ -63,7 +63,7 @@
                                 <h3 class="item-title">Terreni <span>{{totalePatrimoniT}}</span></h3>
                                 <ul class="item-list">
                                     <li *ngFor="let patrimonio of patrimoniT">
-                                        <span>{{patrimonio.descrizione_tipologia}}</span><span>{{patrimonio.book_value}}</span>
+                                        <span class="badge patrimonio">4</span> <span>{{patrimonio.descrizione_tipologia}}</span><span>{{patrimonio.book_value}}</span>
                                     </li>
                                 </ul>
                             </div>
