--- a/src/app/pages/patrimonio/patrimonio.page.html
+++ b/src/app/pages/patrimonio/patrimonio.page.html
@@ -42,28 +42,31 @@
                     <div class="scheda-table">
                         <div class="scheda-row">
                             <div class="item">
-                                <h3 class="item-title">Abitazioni <span>{{totalePatrimoniA}}</span></h3>
+                                <h3 class="item-title">Abitazioni
+                                    <span>{{totalePatrimoniA == 0 ? '--' : totalePatrimoniA}}</span></h3>
                                 <ul class="item-list">
                                     <li *ngFor="let patrimonio of patrimoniA">
-                                        <span>{{patrimonio.descrizione_tipologia}}</span><span>{{patrimonio.book_value}}</span>
+                                        <span>{{patrimonio.codice_catastale}}</span><span>{{patrimonio.book_value}}</span>
                                     </li>
                                 </ul>
                             </div>
                             <div class="item">
-                                <h3 class="item-title">Commerciali <span>{{totalePatrimoniC}}</span></h3>
+                                <h3 class="item-title">Commerciali
+                                    <span>{{totalePatrimoniC == 0 ? '--' : totalePatrimoniC}}</span></h3>
                                 <ul class="item-list">
                                     <li *ngFor="let patrimonio of patrimoniC">
-                                        <span>{{patrimonio.descrizione_tipologia}}</span><span>{{patrimonio.book_value}}</span>
+                                        <span>{{patrimonio.codice_catastale}}</span><span>{{patrimonio.book_value}}</span>
                                     </li>
                                 </ul>
                             </div>
                         </div>
                         <div class="scheda-row">
                             <div class="item">
-                                <h3 class="item-title">Terreni <span>{{totalePatrimoniT}}</span></h3>
+                                <h3 class="item-title">Terreni
+                                    <span>{{totalePatrimoniT == 0 ? '--' : totalePatrimoniT}}</span></h3>
                                 <ul class="item-list">
                                     <li *ngFor="let patrimonio of patrimoniT">
-                                        <span>{{patrimonio.descrizione_tipologia}}</span><span>{{patrimonio.book_value}}</span>
+                                        <span>{{patrimonio.codice_catastale}}</span><span>{{patrimonio.book_value}}</span>
                                     </li>
                                 </ul>
                             </div>
