--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -1,17 +1,3 @@
-<!--<ion-header no-border no-padding no-margin>
-  <ion-toolbar color="bar" no-padding no-margin>
-    <ion-buttons slot="start" class="logo left-side-element"  no-padding no-margin> </ion-buttons>
-    <ion-title text-left class="header-bar">
-      <img src="/assets/img/readvice-logo@2x.png" class="title">
-    </ion-title>
-    <ion-buttons slot="end" class="tools">
-        <a href="#" class="hints tasks"><span>10</span></a>
-        <a href="#" class="hints alerts"><span>10</span></a>
-        <a href="#" class="user">alessandro.tamborini@readvice.it</a>
-    </ion-buttons>
-</ion-toolbar>
-</ion-header>-->
-
 <div class="main-header">
     <div class="logo"></div>
     <div class="header-bar">
@@ -79,7 +65,7 @@
                         </div>
                         <div class="scheda-row">
                             <div class="item">
-                                <h3 class="item-title">Tasse <span>{{immobile.tasse_totale}}</span></h3>
+                                <h3 class="item-title">Tasse <span>{{immobile.tasse}}</span></h3>
                                 <ul class="item-list half-height">
                                     <li *ngFor="let t of immobile.tasse">
                                         <span>{{t.descrizione_tassa}}</span><span>{{t.importo_annuale}}</span></li>
@@ -105,14 +91,17 @@
             <div class="row">
                 <div class="header-cell">
                     <span class="small">immobili di</span>
-                    <span class="nome">Paolo Rossi</span>
+                    <span class="nome">{{getCliente().nome + ' ' + getCliente().cognome}}</span>
                 </div>
             </div>
         </div>
         <div class="list">
             <ul class="lista-immobile">
-                <li class="immobile selected">
-                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
+                <li class="immobile" *ngFor="let immobileLista of immobiliCliente"
+                    (click)="apriSchedaImmobile(immobileLista.immobile_id)">
+                    <div class="indirizzo">{{immobileLista.indirizzo}},
+                        {{immobileLista.civico}}<br>{{immobileLista.cap}} {{immobileLista.citta}}
+                        ({{immobileLista.provincia}})</div>
                     <div class="tipologia table">
                         <div class="row">
                             <div class="cell abitazione">
@@ -122,119 +111,7 @@
                     <div class="quota table">
                         <div class="row">
                             <div class="cell">
-                                27<small>%</small>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="immobile">
-                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
-                    <div class="tipologia table">
-                        <div class="row">
-                            <div class="cell commerciale">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="quota table">
-                        <div class="row">
-                            <div class="cell">
-                                27<small>%</small>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="immobile">
-                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
-                    <div class="tipologia table">
-                        <div class="row">
-                            <div class="cell parcheggio">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="quota table">
-                        <div class="row">
-                            <div class="cell">
-                                27<small>%</small>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="immobile">
-                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
-                    <div class="tipologia table">
-                        <div class="row">
-                            <div class="cell magazzino">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="quota table">
-                        <div class="row">
-                            <div class="cell">
-                                27<small>%</small>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="immobile">
-                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
-                    <div class="tipologia table">
-                        <div class="row">
-                            <div class="cell abitazione">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="quota table">
-                        <div class="row">
-                            <div class="cell">
-                                27<small>%</small>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="immobile">
-                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
-                    <div class="tipologia table">
-                        <div class="row">
-                            <div class="cell commerciale">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="quota table">
-                        <div class="row">
-                            <div class="cell">
-                                27<small>%</small>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="immobile">
-                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
-                    <div class="tipologia table">
-                        <div class="row">
-                            <div class="cell parcheggio">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="quota table">
-                        <div class="row">
-                            <div class="cell">
-                                27<small>%</small>
-                            </div>
-                        </div>
-                    </div>
-                </li>
-                <li class="immobile">
-                    <div class="indirizzo">Via F.lli Rosselli, 7<br>57100 Cecina (LI)</div>
-                    <div class="tipologia table">
-                        <div class="row">
-                            <div class="cell magazzino">
-                            </div>
-                        </div>
-                    </div>
-                    <div class="quota table">
-                        <div class="row">
-                            <div class="cell">
-                                27<small>%</small>
+                                {{immobileLista.quota}}<small>%</small>
                             </div>
                         </div>
                     </div>
@@ -271,4 +148,4 @@
     </div>
 </app-quoteproprieta-modal>
 
-LE MIE RICHIESTE > NUOVA > RICHIESTA DOCUMENTALRE
+<!-- LE MIE RICHIESTE > NUOVA > RICHIESTA DOCUMENTALRE -->
