--- a/src/app/pages/report-analisi/report-analisi.page.html
+++ b/src/app/pages/report-analisi/report-analisi.page.html
@@ -1,17 +1,3 @@
-<!--<ion-header no-border no-padding no-margin>
-  <ion-toolbar color="bar" no-padding no-margin>
-    <ion-buttons slot="start" class="logo left-side-element"  no-padding no-margin> </ion-buttons>
-    <ion-title text-left class="header-bar">
-      <img src="/assets/img/readvice-logo@2x.png" class="title">
-    </ion-title>
-    <ion-buttons slot="end" class="tools">
-        <a href="#" class="hints tasks"><span>10</span></a>
-        <a href="#" class="hints alerts"><span>10</span></a>
-        <a href="#" class="user">alessandro.tamborini@readvice.it</a>
-    </ion-buttons>
-</ion-toolbar>
-</ion-header>-->
-
 <div class="main-header">
     <div class="logo"></div>
     <div class="header-bar">
@@ -20,10 +6,8 @@
     <div class="tools">
         <a href="#" class="hints tasks"><span>10</span></a>
         <a href="#" class="hints alerts"><span>10</span></a>
-        <a href="#" class="user">alessandro.tamborini@readvice.it</a>
-    </div>
+        <a href="#" class="user">{{getUtenteEmail()}}</a> </div>
 </div>
-
 <div class="main-body body-no-right-menu">
     <div class="content-area">
         <div class="tool-area">
@@ -31,7 +15,7 @@
                 <div class="tool-row">
                     <div class="tool">
                         <a href="#" class="button back only-icon">&nbsp;</a>
-                        <h3 class="page-title cliente">Francesca Palmi - Report</h3>
+                        <h3 class="page-title cliente">{{cliente.nome + ' ' + cliente.cognome}} - Report</h3>
                         <div style="float: right"><a href="#" class="button upload">Invia scheda</a></div>
                     </div>
                 </div>
@@ -40,32 +24,34 @@
         <div class="content">
             <div class="report-tab">
                 <ul>
-                    <li>Generali</li>
+                    <li (click)="goToReportGenerale()">Generali</li>
                     <li class="active">Analisi</li>
                 </ul>
             </div>
             <div class="report-analisi">
                 <div class="grafici">
-                    <img src="/assets/img/grafici-placeholder.jpg">
+                    <!-- <img src="/assets/img/grafici-placeholder.jpg"> -->
+                    <div class="row">
+                        <div class="col-md-12">
+                            <canvas id="canvasAndamento" #linesCanvas>{{linesChart}}</canvas>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-3">
+                            <canvas id="canvasIndicatori" #indicatoriCanvas>{{indicatoriChart}}</canvas>
+                        </div>
+                        <div class="col-md-3">
+                            <canvas id="canvasConcentrazione" #concentrazioneCanvas>{{concentrazioneChart}}</canvas>
+                        </div>
+                        <div class="col-md-3">
+                            <canvas id="canvasTipologia" #tipologiaCanvas>{{tipologiaChart}}</canvas>
+                        </div>
+                        <div class="col-md-3">
+                            <canvas id="canvasAffittuari" #affittuariCanvas>{{affittuariChart}}</canvas>
+                        </div>
+                    </div>
                 </div>
             </div>
         </div>
     </div>
-    <!--<div class="right-area">
-        <div class="header">
-            <div class="row">
-                <div class="header-cell">
-                    <span class="nome">Passivi</span>
-                </div>
-            </div>
-        </div>
-        <div class="list no-footer">
-            <ul>
-                <li class="report-item">
-                    <span class="item">Spese condominiali</span>
-                    <span class="item-value">4000€</span>
-                </li>
-            </ul>
-        </div>
-    </div>-->
 </div>
