--- a/src/app/pages/report-analisi/report-analisi.page.html
+++ b/src/app/pages/report-analisi/report-analisi.page.html
@@ -31,25 +31,38 @@
             <div class="report-analisi">
                 <div class="grafici">
                     <!-- <img src="/assets/img/grafici-placeholder.jpg"> -->
-                    <div class="row">
-                        <div class="col-md-12">
-                            <canvas id="canvasAndamento" #linesCanvas>{{linesChart}}</canvas>
-                        </div>
-                    </div>
-                    <div class="row">
-                        <div class="col-md-3">
-                            <canvas id="canvasIndicatori" #indicatoriCanvas>{{indicatoriChart}}</canvas>
-                        </div>
-                        <div class="col-md-3">
-                            <canvas id="canvasConcentrazione" #concentrazioneCanvas>{{concentrazioneChart}}</canvas>
-                        </div>
-                        <div class="col-md-3">
-                            <canvas id="canvasTipologia" #tipologiaCanvas>{{tipologiaChart}}</canvas>
-                        </div>
-                        <div class="col-md-3">
-                            <canvas id="canvasAffittuari" #affittuariCanvas>{{affittuariChart}}</canvas>
-                        </div>
-                    </div>
+                    <ion-grid>
+                        <ion-row>
+                            <ion-col size="12" size-md>
+                                <div>
+                                    <canvas id="canvasAndamento" #linesCanvas aspectRatio=3>{{linesChart}}</canvas>
+                                </div>
+                            </ion-col>
+                        </ion-row>
+                        <ion-row>
+                            <ion-col size-lg="3" size-md="6" size-sm="12">
+                                <div>
+                                    <canvas id="canvasIndicatori" #indicatoriCanvas>{{indicatoriChart}}</canvas>
+                                </div>
+                            </ion-col>
+                            <ion-col size-lg="3" size-md="6" size-sm="12">
+                                <div>
+                                    <canvas id="canvasConcentrazione" #concentrazioneCanvas>{{concentrazioneChart}}</canvas>
+                                </div>
+                            </ion-col>
+                            <ion-col size-lg="3" size-md="6" size-sm="12">
+                                <div>
+                                    <canvas id="canvasTipologia" #tipologiaCanvas>{{tipologiaChart}}</canvas>
+                                </div>
+                            </ion-col>
+                            <ion-col size-lg="3" size-md="6" size-sm="12">
+                                <div>
+                                    <canvas id="canvasAffittuari" #affittuariCanvas>{{affittuariChart}}</canvas>
+                                </div>
+                            </ion-col>
+                        </ion-row>
+                    </ion-grid>
+                    
                 </div>
             </div>
         </div>
