--- a/src/app/pages/report-generale/report-generale.page.html
+++ b/src/app/pages/report-generale/report-generale.page.html
@@ -48,9 +48,11 @@
                                 {{imm.indirizzo + ' ' + imm.civico + ', ' + imm.citta}}</div>
                             <div class="table-cell">{{imm.quota + '%'}}</div>
                             <div class="table-cell">{{imm.codice_tipologia}}</div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro;</div>
+                            <div class="table-cell">{{getTotalePassiviImmobile(imm)}} &euro; <img
+                                    src="/assets/img/icon-view-mini@2x.png" (click)="caricaPassiviImmobile(imm)"></div>
+                            <div class="table-cell">{{getTotaleAttiviImmobile(imm)}} &euro; <img
+                                    src="/assets/img/icon-view-mini@2x.png" (click)="caricaAttiviImmobile(imm)"></div>
+                            <div class="table-cell">{{getTotaleImmobile(imm)}} &euro;</div>
                         </div>
                         <!-- <div class="table-row">
                             <div class="table-cell">Nino Bixio 12, Milano</div>
