--- a/src/app/pages/scheda-immobile/scheda-immobile.page.html
+++ b/src/app/pages/scheda-immobile/scheda-immobile.page.html
@@ -16,7 +16,7 @@
             <div class="tool-table">
                 <div class="tool-row">
                     <div class="tool">
-                        <a href="#" class="button back only-icon">&nbsp;</a>
+                        <button class="button back only-icon" (click)="goToHome()">&nbsp;</button>
                         <h3 class="page-title cliente">{{getCliente().nome + ' ' + getCliente().cognome}} - Immobile
                         </h3>
                         <div style="float: right">
