--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -56,7 +56,7 @@
                                         class="email">{{clienteScelto.email}}</span></div>
                                 <div class="item tools"><button href="#"
                                         class="button edit full-width">Modifica</button><button href="#"
-                                        class="button report full-width" (click)="goToReportAnalisi()">Report</button>
+                                        class="button report full-width" (click)="goToAnalisiGenerale()">Report</button>
                                 </div>
                             </div>
                         </div>
