--- a/src/app/pages/report-generale/report-generale.page.html
+++ b/src/app/pages/report-generale/report-generale.page.html
@@ -16,7 +16,7 @@
             <div class="tool-table">
                 <div class="tool-row">
                     <div class="tool">
-                        <a href="#" class="button back only-icon">&nbsp;</a>
+                        <button class="button back only-icon" (click)="goToHome()">&nbsp;</button>
                         <h3 class="page-title cliente">{{cliente.nome + ' ' + cliente.cognome}} - Report</h3>
                         <div style="float: right"><a href="#" class="button upload">Invia scheda</a></div>
                     </div>
@@ -54,94 +54,6 @@
                                     src="/assets/img/icon-view-mini@2x.png" (click)="caricaAttiviImmobile(imm)"></div>
                             <div class="table-cell">{{getTotaleImmobile(imm)}} &euro;</div>
                         </div>
-                        <!-- <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div>
-                        <div class="table-row">
-                            <div class="table-cell">Nino Bixio 12, Milano</div>
-                            <div class="table-cell">100%</div>
-                            <div class="table-cell">A/4</div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro;</div>
-                        </div> -->
                     </div>
                 </div>
                 <div class="table-total-container">
@@ -150,9 +62,10 @@
                             <div class="table-cell">&nbsp;</div>
                             <div class="table-cell">&nbsp;</div>
                             <div class="table-cell">&nbsp;</div>
-                            <div class="table-cell">10K &euro; <img src="/assets/img/icon-view-mini@2x.png"></div>
-                            <div class="table-cell">10K &euro;</div>
-                            <div class="table-cell">10K &euro;</div>
+                            <div class="table-cell">{{getTotalePassiviImmobili()}} &euro; <img
+                                    src="/assets/img/icon-view-mini@2x.png"></div>
+                            <div class="table-cell">{{getTotaleAttiviImmobili()}} &euro;</div>
+                            <div class="table-cell">{{getTotaleImmobili()}} &euro;</div>
                         </div>
                     </div>
                 </div>
@@ -163,15 +76,15 @@
         <div class="header">
             <div class="row">
                 <div class="header-cell">
-                    <span class="nome">Passivi</span>
+                    <span class="nome">{{etichettaColonna}}</span>
                 </div>
             </div>
         </div>
         <div class="list no-footer">
             <ul>
-                <li class="report-item">
-                    <span class="item">Spese condominiali</span>
-                    <span class="item-value">4000€</span>
+                <li class="report-item" *ngFor="let oggetto of oggettiColonnaDestra">
+                    <span class="item">{{oggetto.descrizione}}</span>
+                    <span class="item-value">{{oggetto.valore}}</span>
                 </li>
             </ul>
         </div>
