--- a/src/app/pages/home/home.page.html
+++ b/src/app/pages/home/home.page.html
@@ -120,7 +120,7 @@
                         ({{immobileLista.provincia}})</div>
                     <div class="tipologia table">
                         <div class="row">
-                            <div class="cell abitazione">
+                            <div class="cell parcheggio">
                             </div>
                         </div>
                     </div>
